chore(Favorites): Fix vertical scrolling visible on favorites

--- a/ui/src/style.scss
+++ b/ui/src/style.scss
@@ -86,7 +86,7 @@ body {
   width: 100%;
 }
 
-.vertically-scrollable {
+.horizontally-scrollable {
   display: inline-flex;
   gap: var(--gap);
   width: 100%;
